updated html and css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
 </head>
 <body>
-    
+    <header id="header">
+        <h2>Devang Malhotra</h2>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#details">Details</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="home"></section>
+        <section id="details"></section>
+        <section id="projects"></section>
+        <section id="contact"></section>
+    </main>
 </body>
 </html>
