updated html and css and added files

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <header id="header">
         <h2>Devang Malhotra</h2>
-        <nav>
+        <nav id="navbar">
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#welcome-section">Home</a></li>
                 <li><a href="#details">Details</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -20,7 +20,12 @@
         </nav>
     </header>
     <main>
-        <section id="home"></section>
+        <section id="welcome-section">
+            <div id="front-content">
+                <h1>Hi, I'm Devang!</h1>
+                <button>Resume</button>
+            </div>
+        </section>
         <section id="details"></section>
         <section id="projects"></section>
         <section id="contact"></section>
