updated html and css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Devang Malhotra</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header id="header">
@@ -23,7 +24,7 @@
         <section id="welcome-section">
             <div id="front-content">
                 <h1>Hi, I'm Devang!</h1>
-                <button>Resume</button>
+                <a id="resume-button" href="files/Devang Malhotra - Resume.pdf" download="Devang Malhotra - Resume">Resume <i class="fa fa-download"></i></a>
             </div>
         </section>
         <section id="details"></section>
