--- a/index.html
+++ b/index.html
@@ -23,11 +23,17 @@
     <main>
         <section id="welcome-section">
             <div id="front-content">
-                <h1>Hi, I'm Devang!</h1>
+                <h1 id="intro-text">Hi, I'm Devang!</h1>
+                <p id="intro-caption">Computer Science & BBA Student</p>
                 <a id="resume-button" href="files/Devang Malhotra - Resume.pdf" download="Devang Malhotra - Resume">Resume <i class="fa fa-download"></i></a>
             </div>
         </section>
-        <section id="details"></section>
+        <section id="details">
+            <h1 class="section-title">Details</h1>
+            <div id="details-content">
+                <img id="pic-myself" src="images/Screen Shot 2024-08-11 at 4.57.13 PM.png" alt="Picture of myself">
+            </div>
+        </section>
         <section id="projects"></section>
         <section id="contact"></section>
     </main>
