updated html ans css

--- a/index.html
+++ b/index.html
@@ -29,9 +29,19 @@
             </div>
         </section>
         <section id="details">
-            <h1 class="section-title">Details</h1>
+            <div class="section-title">
+                <h1>Details</h1>
+            </div>
             <div id="details-content">
-                <img id="pic-myself" src="images/Screen Shot 2024-08-11 at 4.57.13 PM.png" alt="Picture of myself">
+                <div class="pfp">
+                    <img id="pic-myself" src="images/Screen Shot 2024-08-11 at 4.57.13 PM.png" alt="Picture of myself">
+                </div>
+                <div class="info-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero eius quo dignissimos excepturi consectetur dolor est, tenetur corrupti, optio omnis explicabo. Sed provident quam distinctio debitis magnam incidunt eveniet! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum nisi, nulla nam voluptatem adipisci veniam necessitatibus expedita corporis blanditiis enim iusto ea asperiores ipsum perferendis vel rem! Eaque, voluptatibus quam?</p>
+                </div>
+            </div>
+            <div class="section-title">
+                <h1>Tech Stack</h1>
             </div>
         </section>
         <section id="projects"></section>
