created python icon

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             <div class="section-title">
                 <h1>Tech Stack</h1>
             </div>
+            <div id="tech-stack-icons">
+                <div class="tech-stack-icon-div">
+                    <img class="tech-stack-icon" src="images/python.svg" alt="Python">
+                </div>
+            </div>
         </section>
         <section id="projects"></section>
         <section id="contact"></section>
