added all icons

--- a/index.html
+++ b/index.html
@@ -43,9 +43,42 @@
             <div class="section-title">
                 <h1>Tech Stack</h1>
             </div>
-            <div id="tech-stack-icons">
-                <div class="tech-stack-icon-div">
-                    <img class="tech-stack-icon" src="images/python.svg" alt="Python">
+            <div id="icons-container">
+                <div id="tech-stack-icons">
+                    <div class="tech-stack-icon-div">
+                        <img class="tech-stack-icon" src="images/python.svg" alt="Python">
+                    </div>
+                    <p>Python</p>
+                </div>
+                <div id="tech-stack-icons">
+                    <div class="tech-stack-icon-div">
+                        <img class="tech-stack-icon" src="images/c.svg" alt="Python">
+                    </div>
+                    <p>C</p>
+                </div>
+                <div id="tech-stack-icons">
+                    <div class="tech-stack-icon-div">
+                        <img class="tech-stack-icon" src="images/mysql.svg" alt="MySQL">
+                    </div>
+                    <p>MySQL</p>
+                </div>
+                <div id="tech-stack-icons">
+                    <div class="tech-stack-icon-div">
+                        <img class="tech-stack-icon" src="images/html5.svg" alt="HTML">
+                    </div>
+                    <p>HTML</p>
+                </div>
+                <div id="tech-stack-icons">
+                    <div class="tech-stack-icon-div">
+                        <img class="tech-stack-icon" src="images/css3.svg" alt="CSS">
+                    </div>
+                    <p>CSS</p>
+                </div>
+                <div id="tech-stack-icons">
+                    <div class="tech-stack-icon-div">
+                        <img class="tech-stack-icon" src="images/javascript.svg" alt="JavaScript">
+                    </div>
+                    <p>JavaScript</p>
                 </div>
             </div>
         </section>
