finished details section (desktop), started projects section

--- a/index.html
+++ b/index.html
@@ -44,37 +44,43 @@
                 <h1>Tech Stack</h1>
             </div>
             <div id="icons-container">
-                <div id="tech-stack-icons">
+                <div class="tech-stack-icons">
                     <div class="tech-stack-icon-div">
                         <img class="tech-stack-icon" src="images/python.svg" alt="Python">
                     </div>
                     <p>Python</p>
                 </div>
-                <div id="tech-stack-icons">
+                <div class="tech-stack-icons">
+                    <div class="tech-stack-icon-div">
+                        <img class="tech-stack-icon" src="images/icons8-java-500.png" alt="Java">
+                    </div>
+                    <p>Java</p>
+                </div>
+                <div class="tech-stack-icons">
                     <div class="tech-stack-icon-div">
                         <img class="tech-stack-icon" src="images/c.svg" alt="Python">
                     </div>
                     <p>C</p>
                 </div>
-                <div id="tech-stack-icons">
+                <div class="tech-stack-icons">
                     <div class="tech-stack-icon-div">
                         <img class="tech-stack-icon" src="images/mysql.svg" alt="MySQL">
                     </div>
                     <p>MySQL</p>
                 </div>
-                <div id="tech-stack-icons">
+                <div class="tech-stack-icons">
                     <div class="tech-stack-icon-div">
                         <img class="tech-stack-icon" src="images/html5.svg" alt="HTML">
                     </div>
                     <p>HTML</p>
                 </div>
-                <div id="tech-stack-icons">
+                <div class="tech-stack-icons">
                     <div class="tech-stack-icon-div">
                         <img class="tech-stack-icon" src="images/css3.svg" alt="CSS">
                     </div>
                     <p>CSS</p>
                 </div>
-                <div id="tech-stack-icons">
+                <div class="tech-stack-icons">
                     <div class="tech-stack-icon-div">
                         <img class="tech-stack-icon" src="images/javascript.svg" alt="JavaScript">
                     </div>
@@ -82,7 +88,17 @@
                 </div>
             </div>
         </section>
-        <section id="projects"></section>
+        <section id="projects">
+            <div class="section-title">
+                <h1>Projects</h1>
+            </div>
+            <div id="cards">
+                <div class="project-card">
+                    <div class="card-content"></div>
+                    <h4>Test</h4>
+                </div>
+            </div>
+        </section>
         <section id="contact"></section>
     </main>
 </body>
