updated html and css

--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
             </div>
             <div id="cards">
                 <div class="project-card">
-                    <div class="card-content"></div>
-                    <h4>Test</h4>
+                    <div class="card-content">
+                        <h4>Test</h4>
+                    </div>
                 </div>
             </div>
         </section>
