updated html and css

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div id="cards">
                 <div class="project-card">
                     <div class="card-content">
-                        <h4>Test</h4>
+                        <h4>Finance Dashboard</h4>
                     </div>
                 </div>
             </div>
