--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
                 <div class="project-card">
                     <div class="card-content">
                         <h4>Finance Dashboard</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <div class="card-icons">
+                            <img src="images/icons8-java-500.png" alt="Java">
+                            <img src="images/mysql.svg" alt="MySQL">
+                            <img src="images/html5.svg" alt="HTML">
+                            <img src="images/css3.svg" alt="CSS">
+                            <img src="images/javascript.svg" alt="JavaScript">
+                        </div>
                     </div>
                 </div>
             </div>
