finished first card

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                             <img src="images/css3.svg" alt="CSS">
                             <img src="images/javascript.svg" alt="JavaScript">
                         </div>
+                        <div class="project-link-container">
+                            <a class="project-link-button" href="https://github.com/devangmalhotra">GitHub <i class="fa fa-external-link"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
