finished all cards for projects

--- a/index.html
+++ b/index.html
@@ -105,7 +105,35 @@
                             <img src="images/javascript.svg" alt="JavaScript">
                         </div>
                         <div class="project-link-container">
-                            <a class="project-link-button" href="https://github.com/devangmalhotra">GitHub <i class="fa fa-external-link"></i></a>
+                            <a class="project-link-button" href="https://github.com/devangmalhotra" target="_blank">GitHub <i class="fa fa-external-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-content">
+                        <h4>Musicube</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <div class="card-icons">
+                            <img src="images/python.svg" alt="Python">
+                            <img src="images/pocoo_flask-icon.svg" alt="Flask">
+                            <img src="images/html5.svg" alt="HTML">
+                            <img src="images/css3.svg" alt="CSS">
+                        </div>
+                        <div class="project-link-container">
+                            <a class="project-link-button" href="https://github.com/devangmalhotra/musicube" target="_blank">GitHub <i class="fa fa-external-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-content">
+                        <h4>Marking Application</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <div class="card-icons">
+                            <img src="images/excel-file-svgrepo-com.svg" alt="VBA">
+                            <img src="images/mysql.svg" alt="MySQL">
+                        </div>
+                        <div class="project-link-container">
+                            <a class="project-link-button" href="https://github.com/devangmalhotra/student-marking-application" target="_blank">GitHub <i class="fa fa-external-link"></i></a>
                         </div>
                     </div>
                 </div>
