updated html and css

--- a/index.html
+++ b/index.html
@@ -139,7 +139,12 @@
                 </div>
             </div>
         </section>
-        <section id="contact"></section>
+        <section id="contact">
+            <div class="section-title">
+                <h1>Feel Free to Contact Me!</h1>
+            </div>
+        </section>
     </main>
+    <footer id="footer"></footer>
 </body>
 </html>
