finished contact section

--- a/index.html
+++ b/index.html
@@ -143,6 +143,35 @@
             <div class="section-title">
                 <h1>Feel Free to Contact Me!</h1>
             </div>
+            <div id="contact-content">
+                <div class="contact-container">
+                    <div class="contact-icon">
+                        <a class="contact-button" href="mailto:malh2226@mylaurier.ca" target="_blank"><i class="fa fa-envelope"></i></a>
+                    </div>
+                    <div class="content-text">
+                        <h4>Email</h4>
+                        <p>malh2226@mylaurier.ca</p>
+                    </div>
+                </div>
+                <div class="contact-container">
+                    <div class="contact-icon">
+                        <a class="contact-button" href="https://github.com/devangmalhotra" target="_blank"><i class="fa fa-github"></i></a>
+                    </div>
+                    <div class="content-text">
+                        <h4>GitHub</h4>
+                        <p>@devangmalhotra</p>
+                    </div>
+                </div>
+                <div class="contact-container">
+                    <div class="contact-icon">
+                        <a class="contact-button" href="https://www.linkedin.com/in/devangmalhotra/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                    </div>
+                    <div class="content-text">
+                        <h4>LinkedIn</h4>
+                        <p>Devang Malhotra</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer id="footer"></footer>
