--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@
             </div>
         </section>
     </main>
-    <footer id="footer"></footer>
+    <footer id="footer">
+        <div id="footer-text">
+            <p>&copy 2024 Devang Malhotra. All Rights Reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
