added description for projects

--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
             <div class="section-title">
                 <h1>Projects</h1>
             </div>
-            <div id="cards">
-                <div class="project-card">
+            <div id="tiles">
+                <div class="project-tile">
                     <div class="card-content">
                         <h4>Finance Dashboard</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Displays stock/crypto prices and sets financial reminders.</p>
                         <div class="card-icons">
                             <img src="images/icons8-java-500.png" alt="Java">
                             <img src="images/mysql.svg" alt="MySQL">
@@ -109,10 +109,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="project-card">
+                <div class="project-tile">
                     <div class="card-content">
                         <h4>Musicube</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>YouTube to .mp3 file converter using Spotify's API.</p>
                         <div class="card-icons">
                             <img src="images/python.svg" alt="Python">
                             <img src="images/pocoo_flask-icon.svg" alt="Flask">
@@ -124,10 +124,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="project-card">
+                <div class="project-tile">
                     <div class="card-content">
                         <h4>Marking Application</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Creates a detailed report on the grades of each student.</p>
                         <div class="card-icons">
                             <img src="images/excel-file-svgrepo-com.svg" alt="VBA">
                             <img src="images/mysql.svg" alt="MySQL">
@@ -146,7 +146,7 @@
             <div id="contact-content">
                 <div class="contact-container">
                     <div class="contact-icon">
-                        <a class="contact-button" href="mailto:malh2226@mylaurier.ca" target="_blank"><i class="fa fa-envelope"></i></a>
+                        <a class="profile-link" href="mailto:malh2226@mylaurier.ca" target="_blank"><i class="fa fa-envelope"></i></a>
                     </div>
                     <div class="content-text">
                         <h4>Email</h4>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="contact-container">
                     <div class="contact-icon">
-                        <a class="contact-button" href="https://github.com/devangmalhotra" target="_blank"><i class="fa fa-github"></i></a>
+                        <a class="profile-link" href="https://github.com/devangmalhotra" target="_blank"><i class="fa fa-github"></i></a>
                     </div>
                     <div class="content-text">
                         <h4>GitHub</h4>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="contact-container">
                     <div class="contact-icon">
-                        <a class="contact-button" href="https://www.linkedin.com/in/devangmalhotra/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                        <a class="profile-link" href="https://www.linkedin.com/in/devangmalhotra/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                     </div>
                     <div class="content-text">
                         <h4>LinkedIn</h4>
