--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <img id="pic-myself" src="images/Screen Shot 2024-08-11 at 4.57.13 PM.png" alt="Picture of myself">
                 </div>
                 <div class="info-text">
-                    <p>Hi! I'm Devang Malhotra, a computer science and business student at Wilfrid Laurier University. With experience in many languages such as Python, Java, JavaScript, and C, I’m passionate about learning new technologies, and creating solutions to real-world problems. I’m excited to apply my skills and collaborate on projects, constantly growing and refining my abilities in the world of tec!</p>
+                    <p>Hi! I'm Devang Malhotra, a computer science and business student at Wilfrid Laurier University. With experience in many languages such as Python, Java, JavaScript, and C, I’m passionate about learning new technologies, and creating solutions to real-world problems. I’m excited to apply my skills and collaborate on projects, constantly growing and refining my abilities in the world of tech!</p>
                 </div>
             </div>
             <div class="section-title">
